--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "displayName": "PassOrCrash",
   "description": "Adds audio feedback in VS Code when your test cases pass or fail.",
   "version": "0.0.1",
+  "main": "./out/extension.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chandubadrinathmanikanta/passorcrash.git"
+  },
   "engines": {
     "vscode": "^1.109.0"
   },
-  "categories": [
-    "Other"
-  ],
-  "activationEvents": [],
-  "main": "./out/extension.js",
+  "categories": ["Other"],
+  "activationEvents": ["onCommand:passorcrash.run"],
   "contributes": {
     "commands": [
       {
-        "command": "passorcrash.helloWorld",
-        "title": "Hello World"
+        "command": "passorcrash.run",
+        "title": "Run PassOrCrash"
       }
     ]
   },
@@ -28,13 +30,16 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.109.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "22.x",
-    "typescript-eslint": "^8.54.0",
+    "@types/vscode": "^1.109.0",
+    "@vscode/test-cli": "^0.0.12",
+    "@vscode/test-electron": "^2.5.2",
     "eslint": "^9.39.2",
     "typescript": "^5.9.3",
-    "@vscode/test-cli": "^0.0.12",
-    "@vscode/test-electron": "^2.5.2"
+    "typescript-eslint": "^8.54.0"
+  },
+  "dependencies": {
+    "play-sound": "^1.1.6"
   }
 }
