--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,7 +1,7 @@
 # Ignore everything by default
-**
+*
 
-# Include only the runtime files
+# Include only necessary files
 !out/
 !media/
 !ShowTree.ps1
